🚙🌧 Checkpoint ./discord.html:11068696/248 ./discord.css:11068696/525 ./unblockedGames.css:31343558/17 ./unblockedGames.html:31343558/2134

--- a/discord.html
+++ b/discord.html
@@ -16,5 +16,6 @@
       Welcome to our Discord! Join our Discord server if you have any questions about this or you want to report something or a mistake.
       Below is the button to join our Discord. Remember to text in the #questions channel. Have fun!
     </p>
+    <button class='btn-2' onclick="window.open('https://discord.gg/SB3fBtX7','_blank')">Our Discord Server</button>
   </body>
 </html>
