🚍🎾 Checkpoint ./unblockedGames.html:31343558/372 ./discord.css:11068696/20

--- a/unblockedGames.html
+++ b/unblockedGames.html
@@ -45,9 +45,9 @@
       <span onclick="soccerPhysicsGame()">fullscreen</span>
       <iframe id="soccerPhysicsGame1" src="https://soccer--physics.glitch.me/"></iframe>
     </div>
-    <div id="bilyGame">
+    <div id="billyGame">
       <span onclick="billyGame()">fullscreen</span>
-      <iframe id="billyGame1"width="560" height="315" allow="fullscreen; autoplay; encrypted-media" src="https://games.construct.net/448/latest" frameborder="0" allowfullscreen="true" msallowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="false" referrerpolicy="unsafe-url" sandbox="allow-same-origin allow-forms allow-scripts allow-pointer-lock allow-orientation-lock allow-popups" scrolling="no"></iframe>
+      <iframe id="billyGame1" src="https://games.construct.net/448/latest"></iframe>
     </div>
   <body>
     <script>
