--- a/unblockedGames.html
+++ b/unblockedGames.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       rel="icon"
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
@@ -43,7 +43,7 @@
     </div>
     <div id="soccerPhysicsGame">
       <span onclick="soccerPhysicsGame()">fullscreen</span>
-      <iframe id="soccerPhysicsGame1" src="https://soccer--physics.glitch.me/"></iframe>
+      <iframe id="soccerPhysicsGame1" src="https://soccer-physics.glitch.me/"></iframe>
     </div>
     <div id="billyGame">
       <span onclick="billyGame()">fullscreen</span>
