--- a/blocksi.html
+++ b/blocksi.html
@@ -27,11 +27,11 @@
     <table>
       <tr>
         <td>
-          <button class="btn" onclick="window.location.href='The Sphero EDU Way.html'">The Sphero EDU Way(Most Popular)</button>
+          <button class="btn" onclick="window.location.href='theSpheroEDUWay.html'">The Sphero EDU Way(Most Popular)</button>
           <img class="img-sphero" src="https://cdn.glitch.me/a2039779-b916-4a79-8095-e5fdcbd18735%2Fsphero.jpeg?v=1639139308122" alt="Sphero EDU">
         </td>
         <td>
-          <button class="btn-2" onclick="window.location.href='Overdrive.html'">The Overdrive Way(Chromebook Only, Requires Play Store)</button>
+          <button class="btn-2" onclick="window.location.href='overdrive.html'">The Overdrive Way(Chromebook Only, Requires Play Store)</button>
           <img class="img-overdrive" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(8).jpeg?v=1639232192290">
         </td>
       </tr>
