--- a/discord.html
+++ b/discord.html
@@ -16,6 +16,6 @@
       Welcome to our Discord! Join our Discord server if you have any questions about this or you want to report something or a mistake.
       Below is the button to join our Discord. Remember to text in the #questions channel. Have fun!
     </p>
-    <button class='btn-2' onclick="location.replace('https://discord.gg/SB3fBtX7')"'_blank'>Our Discord Server</button>
+    <button class='btn-2' onclick="location.replace('https://discord.gg/SB3fBtX7')">Our Discord Server</button>
   </body>
 </html> 
