🙈🍎 Checkpoint ./unblockedGames.html:11068696/192

--- a/unblockedGames.html
+++ b/unblockedGames.html
@@ -114,6 +114,11 @@
       function billyGame() {
         document.getElementById("billyGame1").requestFullscreen();
       }
+      document.addEventListener("button", () => {
+        document.documentElement.requestFullscreen().catch((e) => {
+          console.log(e);
+        });
+      });
     </script>
   </body>
 </html>
