--- a/unblockedGamesSlopeTest.html
+++ b/unblockedGamesSlopeTest.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-      rel="icon"
-      href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
-    />
+    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
+    <script src="/unblockedgames.js" defer></script>
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGames.css" />
   </head>
