--- a/unblockedGames.html
+++ b/unblockedGames.html
@@ -114,6 +114,13 @@
       function billyGame() {
         document.getElementById("billyGame1").requestFullscreen();
       }
+      if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { /* Safari */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE11 */
+    elem.msRequestFullscreen();
+  }
     </script>
   </body>
 </html>
