⚡️📹 Checkpoint ./shortcuts.css:11068696/3:31343558/3 ./index.html:31343558/93 ./unblockedGamesHomeTest.html:31343558/2321 ./unblockedGamesSlopeTest.html:31343558/4

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="informationalWebsites.html">Learn more about...</a>
       <a href="unblockedGames.html">Unblocked Games</a>
       <a href="discord.html">Our Discord</a> 
+      <a href="unblockedGamesHomeTest.html">Test</a>
     </div>
   </body>
 </html>
