🏏🌥 Checkpoint ./unblockedGames.css:31343558/28 ./unblockedGamesHomeTest.html:31343558/2360 ./unblockedGamesSlopeTest.html:31343558/1020

--- a/unblockedGamesSlopeTest.html
+++ b/unblockedGamesSlopeTest.html
@@ -21,31 +21,17 @@
     <button class="btn-1" onclick="window.location.href='index.html'">
       Home
     </button>
+     <ul>
+      <li><a href="unblockedGamesSlopeTest.html">Slope</a></li>
+      <li><a href="#news">Soccer Physics</a></li>
+      <li><a href="#contact">Billy vs Potato Head</a></li>
+      <li><a href="">Coming Soon</a></li>
+    </ul>
 
-    <button onclick="slopeFunction()" id="slopeButton" id="button">
-      Slope
-    </button>
-
-    <button onclick="soccerPhysicsFunction()" id="soccerPhysicsButton" id="button">
-      Soccer Physics
-    </button>
-
-    <button onclick="billyFunction()" id="billyButton" id="button">Billy vs Potato Head</button>
-
-    <button
-      onclick="improvementsFunction()"id="improvementsButton" id="button">Coming Soon</button>
-
+ 
     <div id="slopeGame">
       <span onclick="slopeGame()">fullscreen</span>
       <iframe id="slopeGame1" src="https://ugiytdrcvgbh.glitch.me/"></iframe>
-    </div>
-    <div id="soccerPhysicsGame">
-      <span onclick="soccerPhysicsGame()">fullscreen</span>
-      <iframe id="soccerPhysicsGame1" src="https://soccer--physics.glitch.me/"></iframe>
-    </div>
-    <div id="billyGame">
-      <span onclick="billyGame()">fullscreen</span>
-      <iframe id="billyGame1" src="https://games.construct.net/448/latest"></iframe>
     </div>
   <body>
     </script>
