🍁🎐 Checkpoint ./unblockedGamesHomeTest.html:31343558/4166 ./unblockedGamesTest.css:31343558/314 ./unblockedGamesSlopeTest.html:31343558/4394 ./shortcuts.css:31343558/3098 ./blocksi.css:31343558/3010 ./blocksi.html:31343558/4831 ./index.html:31343558/1583 ./informationalWebsites.html:31343558/2440

--- a/blocksi.html
+++ b/blocksi.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
+    />
     <title>Turk and Yamz | Anti-Blocksi</title>
-    <link rel="stylesheet" href="blocksi.css">
-    <link rel="stylesheet" href="The Sphero EDU Way.html">
-  
-</head>
-<body>
-    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+    <link rel="stylesheet" href="blocksi.css" />
+    <link rel="stylesheet" href="The Sphero EDU Way.html" />
+  </head>
+  <body>
+    <button class="btn-1" onclick="window.location.href='index.html'">
+      Home
+    </button>
     <h1>
-        Getting Past Blocksi
+      Getting Past Blocksi
     </h1>
     <p>
-        Hello there! Welcome to the Anti-Blocksi community! Everyone that goes to this site has one thing in common. We all absolutely hate blocksi. 
-        Blocksi is just horrible and restricts us from having even a little bit of fun. 
-        We have made this site for people who want to play games freely and have fun at school during boring times. 
-        This does require you to have another window open but it will be worth it!(Site gets updated every week). Below are some ways to do it:
-    </p> 
+      Hello there! Welcome to the Anti-Blocksi community! Everyone that goes to
+      this site has one thing in common. We all absolutely hate blocksi. Blocksi
+      is just horrible and restricts us from having even a little bit of fun. We
+      have made this site for people who want to play games freely and have fun
+      at school during boring times. This does require you to have another
+      window open but it will be worth it!(Site gets updated every week). Below
+      are some ways to do it:
+    </p>
     <h3>
-        Enjoy!                                                                     
+      Enjoy!
     </h3>
     <table>
       <tr>
         <td>
-          <button class="btn" onclick="window.location.href='theSpheroEDUWay.html'">The Sphero EDU Way(Most Popular)</button>
-          <img class="img-sphero" src="https://cdn.glitch.me/a2039779-b916-4a79-8095-e5fdcbd18735%2Fsphero.jpeg?v=1639139308122" alt="Sphero EDU">
+          <button
+            class="btn"
+            onclick="window.location.href='theSpheroEDUWay.html'"
+          >
+            The Sphero EDU Way(Most Popular)
+          </button>
+          <img
+            class="img-sphero"
+            src="https://cdn.glitch.me/a2039779-b916-4a79-8095-e5fdcbd18735%2Fsphero.jpeg?v=1639139308122"
+            alt="Sphero EDU"
+          />
         </td>
         <td>
-          <button class="btn-2" onclick="window.location.href='overdrive.html'">The Overdrive Way(Chromebook Only, Requires Play Store)</button>
-          <img class="img-overdrive" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(8).jpeg?v=1639232192290">
+          <button class="btn-2" onclick="window.location.href='overdrive.html'">
+            The Overdrive Way(Chromebook Only, Requires Play Store)
+          </button>
+          <img
+            class="img-overdrive"
+            src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(8).jpeg?v=1639232192290"
+          />
         </td>
       </tr>
       <tr>
         <td>
-          <button class="btn-2" onclick="window.location.href='spectralAnalysis.html'">The Spectral Analysis Way(Chromebook Only, Requires Play Store)</button>
-          <img class="img-spectralanalysis" src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20152039.png?v=1639254063681">
+          <button
+            class="btn-2"
+            onclick="window.location.href='spectralAnalysis.html'"
+          >
+            The Spectral Analysis Way(Chromebook Only, Requires Play Store)
+          </button>
+          <img
+            class="img-spectralanalysis"
+            src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%20152039.png?v=1639254063681"
+          />
         </td>
       </tr>
     </table>
-</body>
+  </body>
 </html>
