--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
-    <link rel="stylesheet" href="style.css"/>
+    <link
+      rel="icon"
+      href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Turk and Yamz</title>
   </head>
   <h1>
     Turk and Yamz
   </h1>
   <body>
-
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
       <a href="informationalWebsites.html">Learn more about...</a>
       <a href="unblockedGames.html">Unblocked Games</a>
-      <a href="discord.html">Our Discord</a> 
+      <a href="discord.html">Our Discord</a>
       <a href="unblockedGamesHomeTest.html">Test</a>
     </div>
   </body>
