--- a/informationalWebsites.html
+++ b/informationalWebsites.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
+    />
     <title>Turk and Yamz | Informational Websites</title>
-    <link rel="stylesheet" href="informationalWebsites.css">  
-</head>
-<body>
-  <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
-  <h1>
-    Some Informational Websites
-  </h1>
-  <table>
-    <tr>
-      <td>Paperfuge</td>
-      <td>Best Hockey players</td>
-    </tr>
-    <tr>
-      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%209.13.50%20PM.png?v=1639275342708" onclick="window.open('https://the-paperfuge.glitch.me','_blank')"></td>
-      <td><img src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(10).jpeg?v=1639275326593" onclick="window.open('https://best-hockey-players.glitch.me','_blank')"></td>
-    </tr>
-  </table>
-</body>
+    <link rel="stylesheet" href="informationalWebsites.css" />
+  </head>
+  <body>
+    <button class="btn-1" onclick="window.location.href='index.html'">
+      Home
+    </button>
+    <h1>
+      Some Informational Websites
+    </h1>
+    <table>
+      <tr>
+        <td>Paperfuge</td>
+        <td>Best Hockey players</td>
+      </tr>
+      <tr>
+        <td>
+          <img
+            src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2FScreenshot%202021-12-11%209.13.50%20PM.png?v=1639275342708"
+            onclick="window.open('https://the-paperfuge.glitch.me','_blank')"
+          />
+        </td>
+        <td>
+          <img
+            src="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(10).jpeg?v=1639275326593"
+            onclick="window.open('https://best-hockey-players.glitch.me','_blank')"
+          />
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
