--- a/unblockedGamesHomeTest.html
+++ b/unblockedGamesHomeTest.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
@@ -23,35 +23,38 @@
     <button class="btn-1" onclick="window.location.href='index.html'">
       Home
     </button>
-    
+
     <div class="row">
-      <div class="column left" style="background-color:#aaa;">
-	      <ul>
+      <div class="column left">
+        <ul>
           <li><a href="unblockedGamesSlopeTest.html">Slope</a></li>
           <li><a href="#news">Soccer Physics</a></li>
           <li><a href="#contact">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
-        <div class="column right" style="background-color:#bbb;">
-          <div id="slopeGame">
-            <span onclick="slopeGame()">fullscreen</span>
-            <iframe id="slopeGame1" src="https://ugiytdrcvgbh.glitch.me/"></iframe>
-          </div>
+      <div class="column right">
+        <div id="slopeGame">
+          <span onclick="slopeGame()">fullscreen</span>
+          <iframe
+            id="slopeGame1"
+            src="https://ugiytdrcvgbh.glitch.me/"
+          ></iframe>
         </div>
       </div>
-    
-  <body>
-    <script>
-      var slope = document.getElementById("slopeGame");
-      slope.style.display = "none";
-      var soccerPhysics = document.getElementById("soccerPhysicsGame");
-      soccerPhysics.style.display = "none";
-      var billy = document.getElementById("billyGame");
-      billy.style.display = "none";
-      var improvements = document.getElementById("improvementsGame");
-      improvements.style.display = "none";
+    </div>
 
-    </script>
+    <body>
+      <script>
+        var slope = document.getElementById("slopeGame");
+        slope.style.display = "none";
+        var soccerPhysics = document.getElementById("soccerPhysicsGame");
+        soccerPhysics.style.display = "none";
+        var billy = document.getElementById("billyGame");
+        billy.style.display = "none";
+        var improvements = document.getElementById("improvementsGame");
+        improvements.style.display = "none";
+      </script>
+    </body>
   </body>
 </html>
