--- a/unblockedGamesSlopeTest.html
+++ b/unblockedGamesSlopeTest.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
+    />
     <script src="/unblockedgames.js" defer></script>
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
@@ -21,19 +24,24 @@
     <button class="btn-1" onclick="window.location.href='index.html'">
       Home
     </button>
-     <ul>
-      <li><a href="unblockedGamesSlopeTest.html">Slope</a></li>
-      <li><a href="#news">Soccer Physics</a></li>
-      <li><a href="#contact">Billy vs Potato Head</a></li>
-      <li><a href="">Coming Soon</a></li>
-    </ul>
-
- 
-    <div id="slopeGame">
-      <span onclick="slopeGame()">fullscreen</span>
-      <iframe id="slopeGame1" src="https://ugiytdrcvgbh.glitch.me/"></iframe>
+    <div class="row">
+      <div class="column left">
+        <ul>
+          <li><a href="unblockedGamesSlopeTest.html">Slope</a></li>
+          <li><a href="#news">Soccer Physics</a></li>
+          <li><a href="#contact">Billy vs Potato Head</a></li>
+          <li><a href="">Coming Soon</a></li>
+        </ul>
+      </div>
+      <div class="column right">
+        <div id="slopeGame">
+          <span onclick="slopeGame()">fullscreen</span>
+          <iframe
+            id="slopeGame1"
+            src="https://ugiytdrcvgbh.glitch.me/"
+          ></iframe>
+        </div>
+      </div>
     </div>
-  <body>
-    </script>
   </body>
 </html>
