🍫🍩 Checkpoint ./unblockedGamesTest.css:31343558/358 ./unblockedGamesHomeTest.html:31343558/76

--- a/unblockedGamesHomeTest.html
+++ b/unblockedGamesHomeTest.html
@@ -10,6 +10,7 @@
     />
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
+    <script src="unblockedGamesTest.js"></script>
   </head>
   <body>
     <h1>Unblocked Games</h1>
