⏳😀 Checkpoint ./ways/theSpheroEDUWay.html:31343558/17 ./unblockedGamesTest.js:31343558/700 ./unblockedGamesSlopeTest.html:31343558/6 ./unblockedGamesHomeTest.html:31343558/492

--- a/unblockedGamesHomeTest.html
+++ b/unblockedGamesHomeTest.html
@@ -10,7 +10,7 @@
     />
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
-    <script src="unblockedGamesTest.js"></script>
+    <script src="unblockedGamesTest.js" defer></script>
   </head>
   <body>
     <h1>Unblocked Games</h1>
@@ -44,18 +44,5 @@
         </div>
       </div>
     </div>
-
-    <body>
-      <script>
-        var slope = document.getElementById("slopeGame");
-        slope.style.display = "none";
-        var soccerPhysics = document.getElementById("soccerPhysicsGame");
-        soccerPhysics.style.display = "none";
-        var billy = document.getElementById("billyGame");
-        billy.style.display = "none";
-        var improvements = document.getElementById("improvementsGame");
-        improvements.style.display = "none";
-      </script>
-    </body>
   </body>
 </html>
