🐒💵 Checkpoint ./unblockedGamesSlopeTest.html:31343558/203 ./unblockedGamesHomeTest.html:31343558/323

--- a/unblockedGamesHomeTest.html
+++ b/unblockedGamesHomeTest.html
@@ -10,11 +10,12 @@
     />
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
-    <script src="unblockedGamesTest.js" defer></script>
+    <script src="unblockedGamesTest.js"></script>
   </head>
   <body>
+    <script src="unblockedGamesTest.js"></script>
     <h1>Unblocked Games</h1>
-
+    
     <p>
       This is where you can play some unblocked games. You can always open all
       the blocked games on a new window with different apps. You can find that
@@ -33,15 +34,6 @@
           <li><a href="#contact">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
-      </div>
-      <div class="column right">
-        <div id="slopeGame">
-          <span onclick="slopeGame()">fullscreen</span>
-          <iframe
-            id="slopeGame1"
-            src="https://ugiytdrcvgbh.glitch.me/"
-          ></iframe>
-        </div>
       </div>
     </div>
   </body>
