--- a/unblockedGamesSlopeTest.html
+++ b/unblockedGamesSlopeTest.html
@@ -8,11 +8,12 @@
       rel="icon"
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
     />
-    <script src="/unblockedGamesTest.js" defer></script>
+
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
   </head>
   <body>
+    <script src="/unblockedGamesTest.js"></script>
     <h1>Unblocked Games</h1>
 
     <p>
