--- a/games/slope.html
+++ b/games/slope.html
@@ -28,9 +28,9 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="unblockedGamesSlopeTest.html">Slope</a></li>
-          <li><a href="#news">Soccer Physics</a></li>
-          <li><a href="#contact">Billy vs Potato Head</a></li>
+          <li><a href="slope.html">Slope</a></li>
+          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
