--- a/games/soccerPhysics.html
+++ b/games/soccerPhysics.html
@@ -8,14 +8,14 @@
       rel="icon"
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
     />
+
     <title>Turk and Yamz | Unblocked Games</title>
     <link rel="stylesheet" href="unblockedGamesTest.css" />
-    <script src="unblockedGamesTest.js"></script>
   </head>
   <body>
-    <script src="unblockedGamesTest.js"></script>
+    <script src="/unblockedGamesTest.js"></script>
     <h1>Unblocked Games</h1>
-    
+
     <p>
       This is where you can play some unblocked games. You can always open all
       the blocked games on a new window with different apps. You can find that
@@ -25,7 +25,6 @@
     <button class="btn-1" onclick="window.location.href='index.html'">
       Home
     </button>
-
     <div class="row">
       <div class="column left">
         <ul>
@@ -34,6 +33,15 @@
           <li><a href="billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
+      </div>
+      <div class="column right">
+        <div id="slopeGame">
+          <span onclick="slopeGame()">fullscreen</span>
+          <iframe
+            id="slopeGame1"
+            src="https://ugiytdrcvgbh.glitch.me/"
+          ></iframe>
+        </div>
       </div>
     </div>
   </body>
