--- a/games/slope.html
+++ b/games/slope.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="unblockedGamesTest.css" />
   </head>
   <body>
-    <script src="/unblockedGamesTest.js"></script>
+    <script src="unblockedGamesTest.js"></script>
     <h1>Unblocked Games</h1>
 
     <p>
@@ -28,9 +28,9 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="slope.html">Slope</a></li>
-          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
-          <li><a href="billy.html">Billy vs Potato Head</a></li>
+          <li><a href="games/slope.html">Slope</a></li>
+          <li><a href="games/soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="games/billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
