--- a/unblockedGamesHomeTest.html
+++ b/unblockedGamesHomeTest.html
@@ -29,9 +29,9 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="slope.html">Slope</a></li>
-          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
-          <li><a href="billy.html">Billy vs Potato Head</a></li>
+          <li><a href="games/slope.html">Slope</a></li>
+          <li><a href="games/soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="games/billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
