👹🐔 Checkpoint ./games/billy.html:31343558/901 ./games/slope.html:31343558/34 ./games/soccerPhysics.html:31343558/35 ./index.html:31343558/10 ./games/unblockedGamesHomeTest.html:31343558/138 ./blocksi.html:31343558/57

--- a/blocksi.html
+++ b/blocksi.html
@@ -36,7 +36,7 @@
         <td>
           <button
             class="btn"
-            onclick="window.location.href='theSpheroEDUWay.html'"
+            onclick="window.location.href='ways/theSpheroEDUWay.html'"
           >
             The Sphero EDU Way(Most Popular)
           </button>
@@ -47,7 +47,7 @@
           />
         </td>
         <td>
-          <button class="btn-2" onclick="window.location.href='overdrive.html'">
+          <button class="btn-2" onclick="window.location.href='ways/overdrive.html'">
             The Overdrive Way(Chromebook Only, Requires Play Store)
           </button>
           <img
@@ -60,7 +60,7 @@
         <td>
           <button
             class="btn-2"
-            onclick="window.location.href='spectralAnalysis.html'"
+            onclick="window.location.href='ways/spectralAnalysis.html'"
           >
             The Spectral Analysis Way(Chromebook Only, Requires Play Store)
           </button>
