--- a/games/slope.html
+++ b/games/slope.html
@@ -28,9 +28,9 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="games/slope.html">Slope</a></li>
-          <li><a href="games/soccerPhysics.html">Soccer Physics</a></li>
-          <li><a href="games/billy.html">Billy vs Potato Head</a></li>
+          <li><a href="slope.html">Slope</a></li>
+          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
@@ -39,7 +39,7 @@
           <span onclick="slopeGame()">fullscreen</span>
           <iframe
             id="slopeGame1"
-            src="https://ugiytdrcvgbh.glitch.me/"
+            src="https://ugiytdrcvgbh.glitch.me/" allowfullscreen
           ></iframe>
         </div>
       </div>
