--- a/games/soccerPhysics.html
+++ b/games/soccerPhysics.html
@@ -10,7 +10,7 @@
     />
 
     <title>Turk and Yamz | Unblocked Games</title>
-    <link rel="stylesheet" href="unblockedGamesTest.css" />
+    <link rel="stylesheet" href="unblockedGamesTest.css"/>
   </head>
   <body>
     <script src="unblockedGamesTest.js"></script>
@@ -28,9 +28,9 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="games/slope.html">Slope</a></li>
-          <li><a href="games/soccerPhysics.html">Soccer Physics</a></li>
-          <li><a href="games/billy.html">Billy vs Potato Head</a></li>
+          <li><a href="slope.html">Slope</a></li>
+          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
@@ -39,7 +39,7 @@
           <span onclick="soccerPhysicsGame()">fullscreen</span>
           <iframe
             id="soccerPhysicsGame1"
-            src="https://soccer--physics.glitch.me/"
+            src="https://soccer--physics.glitch.me/" allowfullscreen
           ></iframe>
         </div>
       </div>
