--- a/games/billy.html
+++ b/games/billy.html
@@ -28,18 +28,18 @@
     <div class="row">
       <div class="column left">
         <ul>
-          <li><a href="games/slope.html">Slope</a></li>
-          <li><a href="games/soccerPhysics.html">Soccer Physics</a></li>
-          <li><a href="games/billy.html">Billy vs Potato Head</a></li>
+          <li><a href="slope.html">Slope</a></li>
+          <li><a href="soccerPhysics.html">Soccer Physics</a></li>
+          <li><a href="billy.html">Billy vs Potato Head</a></li>
           <li><a href="">Coming Soon</a></li>
         </ul>
       </div>
       <div class="column right">
-        <div id="slopeGame">
-          <span onclick="slopeGame()">fullscreen</span>
+        <div id="billyGame">
+          <span onclick="billyGame()">fullscreen</span>
           <iframe
-            id="slopeGame1"
-            src="https://ugiytdrcvgbh.glitch.me/"
+            id="billyGame1"
+            src="https://games.construct.net/448/latest" allowfullscreen
           ></iframe>
         </div>
       </div>
