--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="informationalWebsites.html">Learn more about...</a>
       <a href="unblockedGames.html">Unblocked Games</a>
       <a href="discord.html">Our Discord</a>
-      <a href="unblockedGamesHomeTest.html">Test</a>
+      <a href="games/unblockedGamesHomeTest.html">Test</a>
     </div>
   </body>
 </html>
