💽🏟 Checkpoint ./games/soccerPhysics.html:31343558/71 ./games/unblockedGamesHomeTest.html:31343558/71 ./blocksi.html:31343558/71 ./discord.html:31343558/71 ./informationalWebsites.html:31343558/71 ./shortcuts.html:31343558/71 ./unblockedGames.html:31343558/71 ./ways/overdrive.html:31343558/71 ./ways/spectralAnalysis.html:31343558/71 ./ways/theSpheroEDUWay.html:31343558/71 ./games/billy.html:31343558/235

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -9,7 +9,7 @@
     <title>Turk and Yamz | Keyboard Shortcuts</title>
   </head>
   <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+    <button class="btn-1" onclick="window.location.replace('/index.html')">Home</button>
     <h1>Keyboard Shortcuts</h1>
     <div class="topnav">
       <button onclick="macFunction()">
