--- a/unblockedGames.html
+++ b/unblockedGames.html
@@ -20,7 +20,7 @@
       <a href="blocksi.html">Here.</a>
       But if you are too lazy to do that then here are some fun games to play.
     </p>
-    <button class="btn-1" onclick="window.location.href='index.html'">
+    <button class="btn-1" onclick="window.location.replace('/index.html')">
       Home
     </button>
 
