--- a/blocksi.html
+++ b/blocksi.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="The Sphero EDU Way.html" />
   </head>
   <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">
+    <button class="btn-1" onclick="window.location.replace('/index.html')">
       Home
     </button>
     <h1>
