--- a/discord.html
+++ b/discord.html
@@ -11,7 +11,7 @@
     Our Discord
   </h1> 
   <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+    <button class="btn-1" onclick="window.location.replace('/index.html')">Home</button>
     <p>
       Welcome to our Discord! Join our Discord server if you have any questions about this or you want to report something or a mistake.
       Below is the button to join our Discord. Remember to text in the #questions channel. Have fun!
