--- a/informationalWebsites.html
+++ b/informationalWebsites.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="informationalWebsites.css" />
   </head>
   <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">
+    <button class="btn-1" onclick="window.location.replace('/index.html')">
       Home
     </button>
     <h1>
