--- a/ways/overdrive.html
+++ b/ways/overdrive.html
@@ -12,7 +12,7 @@
   </h1>
 </head>
 <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+    <button class="btn-1" onclick="window.location.replace('/index.html')">Home</button>
     <p>
       Step 1: Download Google Play(Skip this step if you already have it)
     </p>
