--- a/ways/theSpheroEDUWay.html
+++ b/ways/theSpheroEDUWay.html
@@ -12,7 +12,7 @@
   </h1>
 </head>
 <body>
-    <button class="btn-1" onclick="window.location.href='index.html'">Home</button>
+    <button class="btn-1" onclick="window.location.replace('/index.html')">Home</button>
     <p>
       Step 1: Download <a href="https://chrome.google.com/webstore/detail/sphero-edu/hfiocchbmngcelgfdcfbepgoipapddlh?hl=en" target="_blank">Sphero EDU</a> and add it to Chrome and Open it
     </p>
