💠🎾 Checkpoint ./index.html:11068696/420

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       <a href="shortcuts.html">Keyboard Shortcuts</a>
       <a href="blocksi.html">Getting Past Blocksi</a>
       <a href="informationalWebsites.html">Learn more about...</a>
-      <a href="unblockedGames.html">Unblocked Games</a>
+      <a onclick="window.open('https://unblocked-games-66.glitch.me','_blank')">Unblocked Games</a>
       <a href="discord.html">Our Discord</a>
     </div>
+    <p>
+      Welcome to my website! Here, you can put your mind off school for a bit. This contains some useful
+    </p>
   </body>
 </html>
