🏑⛑ Checkpoint ./index.html:11068696/808 ./style.css:11068696/2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <h1>
     Turk and Yamz
   </h1>
+  <p>
+    Welcome to my website! Here, you can learn some useful things and ways to play games without getting blocked. There is also some informational and usefull things like keyboard shortcuts. Click on one down below to get started. Have fun!
+  </p>
   <body>
     <div class="topnav">
       <a href="shortcuts.html">Keyboard Shortcuts</a>
@@ -21,8 +24,5 @@
       <a onclick="window.open('https://unblocked-games-66.glitch.me','_blank')">Unblocked Games</a>
       <a href="discord.html">Our Discord</a>
     </div>
-    <p>
-      Welcome to my website! Here, you can put your mind off school for a bit. This contains some useful
-    </p>
   </body>
 </html>
