🏚🚇 Checkpoint ./style.css:11068696/3208 ./index.html:11068696/18

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Turk and Yamz</title>
+    <title>Yamz</title>
   </head>
   <h1>
-    Turk and Yamz
+    Yamz
   </h1>
   <p>
     Welcome to my website! Here, you can learn some useful things and ways to play games without getting blocked. There is also some informational and usefull things like keyboard shortcuts. Click on one down below to get started. Have fun!
