--- a/blocksi.html
+++ b/blocksi.html
@@ -8,7 +8,7 @@
       rel="icon"
       href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946"
     />
-    <title>Turk and Yamz | Anti-Blocksi</title>
+    <title>Yamz | Anti-Blocksi</title>
     <link rel="stylesheet" href="blocksi.css" />
     <link rel="stylesheet" href="The Sphero EDU Way.html" />
   </head>
