--- a/discord.html
+++ b/discord.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Ffavicon.ico?v=1639171730946" />
     <link rel="stylesheet" href="discord.css"/>
-    <title>Turk and Yamz | Our Discord</title>
+    <title>Yamz | Our Discord</title>
   </head>
   <h1>
     Our Discord
